--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,7 +25,7 @@
   <div class="dropdown-menu dropdown-menu-end p-4 rounded-3 border-0 shadow-lg" aria-labelledby="dropdownMenu3">
 
     <h4 class="fw-700 font-xss mb-4">Notification</h4>
-    <div class="card bg-transparent-card w-100 border-0 ps-5 mb-3">
+    <div class="  d bg-transparent-card w-100 border-0 ps-5 mb-3">
       <img src="https://via.placeholder.com/50x50.png" alt="user" class="w40 position-absolute left-0">
       <h5 class="font-xsss text-grey-900 mb-1 mt-0 fw-700 d-block">Hendrix Stamp <span class="text-grey-400 font-xsssss fw-600 float-right mt-1"> 3 min</span></h5>
       <h6 class="text-grey-500 fw-500 font-xssss lh-4">There are many variations of pass..</h6>
