--- a/src/app/user/update-profile/update-profile.component.html
+++ b/src/app/user/update-profile/update-profile.component.html
@@ -214,7 +214,7 @@
               <div class="card-body p-lg-5 p-4 w-100 border-0 ">
                 <div class="row justify-content-center">
                   <div class="col-lg-4 text-center">
-                    <figure class="avatar ms-auto me-auto mb-0 mt-2 w100"><img [src]="user.avatar" alt="image" class="shadow-sm rounded-3 w-100"></figure>
+                    <figure class="avatar ms-auto me-auto mb-0 mt-2 w100"><img height="100" width="100" [src]="user.avatar" alt="image" class="shadow-sm rounded-3 w-100"></figure>
                     <h2 class="fw-700 font-sm text-grey-900 mt-3">{{user.firstName}} {{user.lastName}}</h2>
                     <h4 class="text-grey-500 fw-500 mb-3 font-xsss mb-4">{{user.username}}</h4>
                     <!-- <a href="#" class="p-3 alert-primary text-primary font-xsss fw-500 mt-2 rounded-3">Upload New Photo</a> -->
