done login signup

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,14 +4,22 @@
     <div class="card shadow-none border-0 ms-auto me-auto login-card">
       <div class="card-body rounded-0 text-left">
         <h2 class="fw-700 display1-size display2-md-size mb-3">Login into <br>your account</h2>
-        <form>
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
 
           <div class="form-group icon-input mb-3">
             <i class="font-sm ti-email text-grey-500 pe-0"></i>
-            <input type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Your Username">
+            <input type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Your Username"
+                   [formControlName]="'username'" name="user_name" required autofocus>
+            <span *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched">
+                Please provide a valid username
+            </span>
           </div>
           <div class="form-group icon-input mb-1">
-            <input type="Password" class="style2-input ps-5 form-control text-grey-900 font-xss ls-3" placeholder="Password">
+            <input type="Password" class="style2-input ps-5 form-control text-grey-900 font-xss ls-3" placeholder="Password"
+            [formControlName]="'password'" name="pass_word" required autofocus>
+            <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
+                Password cannot be empty
+            </span>
             <i class="font-sm ti-lock text-grey-500 pe-0"></i>
           </div>
           <div class="form-check text-left mb-3">
@@ -19,12 +27,16 @@
             <label class="form-check-label font-xsss text-grey-500" for="exampleCheck1">Remember me</label>
             <a href="forgot.html" class="fw-600 font-xsss text-grey-700 mt-1 float-right">Forgot your Password?</a>
           </div>
+          <div class="col-sm-12 p-0 text-left">
+            <div class="form-group mb-1"><button type="submit" class="form-control text-center style2-input text-white fw-600 bg-dark border-0 p-0 ">Login</button></div>
+            <h6 class="text-grey-500 font-xsss fw-500 mt-0 mb-0 lh-32">Dont have account <a routerLink="/sign-up" class="fw-700 ms-1">Register</a></h6>
+            <div class="login-failed" [ngStyle]="{'background-color': 'green'}" *ngIf="this.registerSuccessMessage?.length > 0">
+              <p class="register-success-text">{{registerSuccessMessage}}</p>
+            </div>
+          </div>
         </form>
 
-        <div class="col-sm-12 p-0 text-left">
-          <div class="form-group mb-1"><a href="#" class="form-control text-center style2-input text-white fw-600 bg-dark border-0 p-0 ">Login</a></div>
-          <h6 class="text-grey-500 font-xsss fw-500 mt-0 mb-0 lh-32">Dont have account <a href="register.html" class="fw-700 ms-1">Register</a></h6>
-        </div>
+
         <div class="col-sm-12 p-0 text-center mt-2">
 
           <h6 class="mb-0 d-inline-block bg-white fw-500 font-xsss text-grey-500 mb-3">Or, Sign in with your social account </h6>
