--- a/src/styles.css
+++ b/src/styles.css
@@ -5768,6 +5768,8 @@ textarea.form-control-lg {
 .card-body {
   flex: 1 1 auto;
   padding: 1rem 1rem;
+  width: 600px !important;
+  margin-right: 1000px !important;
 }
 
 .card-title {
