--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -5,51 +5,52 @@
       <div class="card-body rounded-0 text-left">
         <h2 class="fw-700 display1-size display2-md-size mb-4">Create <br>your account</h2>
         <form [formGroup]="signupForm" (ngSubmit)="signup()">
-          <div class="form-group icon-input mb-3">
-            <i class="font-sm ti-user text-grey-500 pe-0"></i>
-            <input [formControlName]="'username'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Your Username" required >
-            <span *ngIf="!signupForm.get('username').valid">
+          <div class="row" style="margin-bottom: 20px">
+            <div class="form-group icon-input col-md-6">
+              <i class="font-sm ti-user text-grey-500 pe-0"></i>
+              <input [formControlName]="'username'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Username" required autofocus>
+              <span *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">
                 Please provide a valid Username
             </span>
+            </div>
+            <div class="form-group icon-input col-md-6">
+              <input [formControlName]="'password'" type="Password" class="style2-input ps-5 form-control text-grey-900 font-xss ls-3" placeholder="Password" required autofocus>
+              <i class="font-sm ti-lock text-grey-500 pe-0"></i>
+              <span *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">
+                Please provide a valid Password
+            </span>
+            </div>
           </div>
-          <div class="form-group icon-input mb-3">
-            <i class="font-sm ti-user text-grey-500 pe-0"></i>
-            <input [formControlName]="'firstName'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Your First Name" required>
-            <span *ngIf="!signupForm.get('firstName').valid">
+          <div class="row" style="margin-bottom: 20px">
+            <div class="form-group icon-input col-md-6">
+              <i class="font-sm ti-user text-grey-500 pe-0"></i>
+              <input [formControlName]="'firstName'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="First Name" required autofocus>
+              <span *ngIf="!signupForm.get('firstName').valid && signupForm.get('firstName').touched">
                 Please provide a valid First Name
             </span>
-          </div>
-          <div class="form-group icon-input mb-3">
-            <i class="font-sm ti-user text-grey-500 pe-0"></i>
-            <input [formControlName]="'lastName'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Your Last Name" required>
-            <span *ngIf="!signupForm.get('lastName').valid">
+            </div>
+            <div class="form-group icon-input col-md-6">
+              <i class="font-sm ti-user text-grey-500 pe-0"></i>
+              <input [formControlName]="'lastName'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Last Name" required autofocus>
+              <span *ngIf="!signupForm.get('lastName').valid && signupForm.get('lastName').touched">
                 Please provide a valid Last Name
             </span>
+            </div>
           </div>
-          <div class="form-group icon-input mb-3">
+
+          <div class="form-group icon-input col-md-12" style="margin-bottom: 20px">
             <i class="font-sm ti-email text-grey-500 pe-0"></i>
-            <input [formControlName]="'email'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Your Email Address" required>
-            <span *ngIf="!signupForm.get('email').valid">
+            <input [formControlName]="'email'" type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Email Address" required autofocus>
+            <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">
                 Please provide a valid Email
             </span>
           </div>
-          <div class="form-group icon-input mb-3">
-            <input [formControlName]="'password'" type="Password" class="style2-input ps-5 form-control text-grey-900 font-xss ls-3" placeholder="Password">
-            <i class="font-sm ti-lock text-grey-500 pe-0"></i>
-            <span *ngIf="!signupForm.get('password').valid">
-                Please provide a valid Password
-            </span>
-          </div>
-          <div class="form-check text-left mb-3">
-            <input type="checkbox" class="form-check-input mt-2" id="exampleCheck1">
-            <label class="form-check-label font-xsss text-grey-500" for="exampleCheck1">Accept Term and Conditions</label>
-            <!-- <a href="#" class="fw-600 font-xsss text-grey-700 mt-1 float-right">Forgot your Password?</a> -->
-          </div>
+          <div class="form-group mb-1"><button type="submit" class="form-control text-center style2-input text-white fw-600 bg-dark border-0 p-0 ">Register</button></div>
+
         </form>
 
         <div class="col-sm-12 p-0 text-left">
-          <div class="form-group mb-1"><a href="#" class="form-control text-center style2-input text-white fw-600 bg-dark border-0 p-0 ">Register</a></div>
-          <h6 class="text-grey-500 font-xsss fw-500 mt-0 mb-0 lh-32">Already have account <a href="login.html" class="fw-700 ms-1">Login</a></h6>
+          <h6 class="text-grey-500 font-xsss fw-500 mt-0 mb-0 lh-32">Already have account <a routerLink="/login" class="fw-700 ms-1">Login</a></h6>
         </div>
 
       </div>
