--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,10 +2,9 @@
   <div class="col-xl-5 d-none d-xl-block p-0 vh-100 bg-image-cover bg-no-repeat" style="background-image: url(http://uitheme.net/sociala/images/login-bg.jpg);"></div>
   <div class="col-xl-7 vh-100 align-items-center d-flex bg-white rounded-3 overflow-hidden">
     <div class="card shadow-none border-0 ms-auto me-auto login-card">
-      <div class="card-body rounded-0 text-left">
+      <div id="car" class="rounded-0 text-left">
         <h2 class="fw-700 display1-size display2-md-size mb-3">Login into <br>your account</h2>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
-
           <div class="form-group icon-input mb-3">
             <i class="font-sm ti-email text-grey-500 pe-0"></i>
             <input type="text" class="style2-input ps-5 form-control text-grey-900 font-xsss fw-600" placeholder="Your Username"
