--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-
+<div class="bookface-body">
+  <div class="row">
+    <div class="col-md-3">
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-md-9">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
