--- a/src/app/user/friend/friend.component.html
+++ b/src/app/user/friend/friend.component.html
@@ -3,13 +3,14 @@
   <div class="middle-sidebar-bottom">
     <div class="middle-sidebar-left pe-0">
       <div class="row">
+        <app-user-header [user]="user" [check]="check"></app-user-header>
         <div class="col-xl-12">
           <div class="card shadow-xss w-100 d-block d-flex border-0 p-4 mb-3">
             <div class="card-body d-flex align-items-center p-0">
               <h2 class="fw-700 mb-0 mt-0 font-md text-grey-900">Friends</h2>
               <div class="search-form-2 ms-auto">
                 <i class="ti-search font-xss"></i>
-                <input type="text" class="form-control text-grey-500 mb-0 bg-greylight theme-dark-bg border-0" placeholder="Search here.">
+                <input type="text" class="form-control text-grey-500 mb-0 bg-greylight theme-dark-bg border-0" #key (change)="findFriend(key.value)" placeholder="Search here.">
               </div>
               <a href="#" class="btn-round-md ms-2 bg-greylight theme-dark-bg rounded-3"><i class="feather-filter font-xss text-grey-500"></i></a>
             </div>
