--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -1,1 +1,72 @@
+<!-- share box start -->
+<div class="card card-small">
+  <div class="share-box-inner">
+    <!-- profile picture end -->
+    <div class="profile-thumb">
+    </div>
+    <!-- profile picture end -->
+    <!-- share content box start -->
+    <div class="share-content-box w-100">
+      <form class="share-text-box">
+        <textarea name="share" class="share-text-field" aria-disabled="true" placeholder="Say Something"
+                  data-toggle="modal" data-target="#textbox" id="email"></textarea>
+      </form>
+    </div>
+    <!-- share content box end -->
+    <!-- Modal start -->
+    <div class="modal fade" id="textbox" aria-labelledby="textbox">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form class="share-text-box" > <!-- status form -->
+            <div class="modal-header">
+              <h5 class="modal-title">Share Your Mood</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body custom-scroll">
+
+              <div ng-app="myApp" ng-controller="myCtrl" class="row">
+                <select ng-model="selectedPrivacy" formControlName="privacy" class="col-3 form-select form-select-sm mb-2 ml-3">
+                  <option  value="" disabled selected hidden>Public</option>
+                  <option> </option> <!-- privacy -->
+                </select>
+              </div>
+              <div class="form-floating">
+                <textarea class="form-control" formControlName="content" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <label for="floatingTextarea2">Comments</label>
+              </div>
+              <div  class="mt-3 mb-3">
+                <img  style="border-radius: 15px">
+              </div>
+              <div class="form-group col-12">
+                <input type="file"
+                       id="file"
+                       #userPhoto
+
+                       name="image"
+                       autocomplete="off" class="form-control"
+                />
+              </div>
+              <div >
+                <div class="progress-bar-container" >
+                  <div class="progress" >
+                  </div>
+                </div>
+              </div>
+              <br>
+              <!--              <button class="btn-share" type="submit" [disabled]="timeOut">share</button>-->
+              <div class="modal-footer">
+                <button type="button" class="post-share-btn" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="post-share-btn">Post</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- Modal end -->
+  </div>
+</div>
+<!-- share box end -->
 
