--- a/src/app/user/update-profile/update-profile.component.html
+++ b/src/app/user/update-profile/update-profile.component.html
@@ -110,7 +110,7 @@
                       <div class="card mt-3 border-0">
                         <div class="card-body d-flex justify-content-between align-items-end p-0">
                           <div class="form-group mb-0 w-100">
-                            <input type="file" id="file" (change)="showPreview($event)">
+                            <input type="file" id="file" accept="image/*" (change)="showPreview($event)">
                             <!--                            <input type="file" name="file" id="file" class="input-file" formControlName="avatar">-->
                             <!--                            <label for="file" class="rounded-3 text-center bg-white btn-tertiary js-labelFile p-4 w-100 border-dashed">-->
                             <!--                              <i class="ti-cloud-down large-icon me-3 d-block"></i>-->
