--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header-container [username]="username" [userId]="userId" [guestBrowsing]="guestBrowsing"></app-header-container>
 <div class="bookface-body">
   <div class="row">
     <div class="col-md-2">
