--- a/src/app/header-container/header-container.component.html
+++ b/src/app/header-container/header-container.component.html
@@ -1,2 +1,5 @@
-<app-header [username]="username" [userId]="userId" *ngIf="!guestBrowsing"></app-header>
+<app-header [username]="username"
+            [userId]="userId"
+            *ngIf="!guestBrowsing"
+            (logOutEvent)="handleLogOutEvent($event)"></app-header>
 <app-header-guest *ngIf="guestBrowsing"></app-header-guest>
