Adapt the changes from dev branch

--- a/src/app/header-container/header-container.component.html
+++ b/src/app/header-container/header-container.component.html
@@ -1,5 +1,6 @@
 <app-header [username]="username"
             [userId]="userId"
+            [user]="user"
             *ngIf="!guestBrowsing"
             (logOutEvent)="handleLogOutEvent($event)"></app-header>
 <app-header-guest *ngIf="guestBrowsing"></app-header-guest>
