--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="card-body p-0 mt-3 position-relative">
     <figure class="avatar position-absolute ms-2 mt-1 top-5"><img [src]="currentUser?.avatar" alt="image" class="shadow-sm rounded-circle h45 w45"></figure>
-    <textarea (click)="openCreatePostModal()" name="message" class="h100 bor-0 w-100 rounded-xxl p-2 ps-5 font-xssss text-grey-500 fw-500 border-light-md theme-dark-bg" cols="30" rows="10" placeholder="What's on your mind?"></textarea>
+    <textarea style="padding: 10px" (click)="openCreatePostModal()" name="message" class="h100 bor-0 w-100 rounded-xxl p-2 ps-5 font-xssss text-grey-500 fw-500 border-light-md theme-dark-bg" cols="30" rows="10" placeholder="     What's on your mind?"></textarea>
   </div>
   <div class="card-body d-flex p-0 mt-0">
     <a href="#" class="d-flex align-items-center font-xssss fw-600 ls-1 text-grey-700 text-dark pe-4"><i class="font-md text-danger feather-video me-2"></i><span class="d-none-xs">Live Video</span></a>
