--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -1,8 +1,8 @@
 <div id="main-container">
   <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3" *ngFor="let post of posts.slice().reverse()">
     <div class="card-body p-0 d-flex">
-      <figure class="avatar me-3"><img [src]="post?.userAvatar" alt="image" class="shadow-sm rounded-circle w45"></figure>
-      <h4 class="fw-700 text-grey-900 font-xssss mt-1">{{post?.userName}}<span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500">{{post.duration}}</span></h4>
+      <figure class="avatar me-3"><img [src]="post?.userAvatar" alt="image" class="shadow-sm rounded-circle w45 h45"></figure>
+      <a type="button" class="fw-700 text-grey-900 font-xssss mt-1" (click)="goToUserProfile(post.userId)">{{post?.userName}}<span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500">{{post.duration}}</span></a>
       <a *ngIf="post.userName === currentUser.username" class="ms-auto" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false"><i class="ti-more-alt text-grey-900 btn-round-md bg-greylight font-xss"></i></a>
       <div class="dropdown-menu dropdown-menu-end p-4 rounded-xxl border-0 shadow-lg" aria-labelledby="dropdownMenu2">
         <div class="card-body p-0 d-flex">
@@ -83,11 +83,12 @@
           </select>
           <ckeditor [editor]="Editor" formControlName="description" >
           </ckeditor>
+          <input type="hidden" formControlName="id">
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="close-btn">Close</button>
-        <button type="submit" class="btn btn-primary" style="color: white" form="editPostForm">Post</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="close-edit-btn">Close</button>
+        <button type="submit" class="btn btn-primary" style="color: white" form="editPostForm">Update</button>
       </div>
 
     </div>
@@ -98,6 +99,24 @@
 
 
 <!--Delete Post Modal-->
+
+<div class="modal fade" id="deletePostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure want to delete this post ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="close-delete-button">Close</button>
+        <button type="button" class="btn btn-danger" (click)="onDeletePost()">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!--End Delete Post Modal-->
 
