--- a/src/app/shared/emotion/emotion.component.html
+++ b/src/app/shared/emotion/emotion.component.html
@@ -1,6 +1,6 @@
 <div class="card-body d-flex p-0 mt-3">
-  <a class="emoji-bttn d-flex align-items-center fw-600 text-grey-900 text-dark lh-26 font-xssss me-2"><i (click)="onLikePost()" class="feather-thumbs-up text-white bg-primary me-1 btn-round-xs font-xss"></i> {{post.likeCount}} Like</a>
-  <a href="#" class="emoji-bttn d-flex align-items-center fw-600 text-grey-900 text-dark lh-26 font-xssss me-2"><i (click)="onHeartPost()" class="feather-heart text-white bg-red-gradiant me-2 btn-round-xs font-xss"></i> {{post.heartCount}} Heart</a>
+  <a type="button" class="emoji-bttn d-flex align-items-center fw-600 text-grey-900 text-dark lh-26 font-xssss me-2"><i (click)="onLikePost()" [ngClass]="{'bg-primary':liked, 'bg-grey': !liked} " class="feather-thumbs-up text-white  me-1 btn-round-xs font-xss"></i> {{post?.likeCount}} Like</a>
+  <a type="button" class="emoji-bttn d-flex align-items-center fw-600 text-grey-900 text-dark lh-26 font-xssss me-2"><i (click)="onHeartPost()" [ngClass]="{'bg-red-gradiant':hearted, 'bg-grey': !hearted}" class="feather-heart text-white me-2 btn-round-xs font-xss"></i> {{post?.heartCount}} Heart</a>
   <div class="emoji-wrap">
     <ul class="emojis list-inline mb-0">
       <li class="emoji list-inline-item"><i class="em em---1"></i> </li>
@@ -13,6 +13,6 @@
       <li class="emoji list-inline-item"><i class="em em-full_moon_with_face"></i></li>
     </ul>
   </div>
-  <a href="#" class="d-flex align-items-center fw-600 text-grey-900 text-dark lh-26 font-xssss"><i class="feather-message-circle text-dark text-grey-900 btn-round-sm font-lg"></i><span class="d-none-xss">{{post.commentCount}}</span></a>
+  <a href="#" class="d-flex align-items-center fw-600 text-grey-900 text-dark lh-26 font-xssss"><i class="feather-message-circle text-dark text-grey-900 btn-round-sm font-lg"></i><span class="d-none-xss">{{post?.commentCount}}</span></a>
   <a href="#" id="dropdownMenu21" data-bs-toggle="dropdown" aria-expanded="false" class="ms-auto d-flex align-items-center fw-600 text-grey-900 text-dark lh-26 font-xssss"><i class="feather-share-2 text-grey-900 text-dark btn-round-sm font-lg"></i><span class="d-none-xs">Share</span></a>
 </div>
