done form create comment

--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -60,8 +60,12 @@
         <input type="text" value="https://socia.be/1rGxjoJKVF0" class="bg-grey text-grey-500 font-xssss border-0 lh-32 p-2 font-xssss fw-600 rounded-3 w-100 theme-dark-bg">
       </div>
     </div>
+    <app-comment [post]="post"></app-comment>
   </div>
+
 </div>
+
+
 
 <!--Edit Post Modal-->
 <div class="modal fade show" id="editPostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
