thong mutual friend

--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -66,7 +66,7 @@
             </div>
           </div>
 
-          <div class="card w-100 shadow-xss rounded-xxl border-0 mb-3">
+          <div class="card w-100 shadow-xss rounded-xxl border-0 mb-3" *ngIf="isUser">
             <div class="card-body d-flex align-items-center  p-4">
               <h4 class="fw-700 mb-0 font-xssss text-grey-900">Friends</h4>
               <a [routerLink]="['/users/list-friend/',user.userId]" class="fw-600 ms-auto font-xssss text-primary">See all</a>
@@ -77,7 +77,7 @@
                   <a *ngIf="i<4" [routerLink]="['/users/user-profile',user.userId]"><img [src]="user.avatar" alt="image" class="img-fluid rounded-3 h-75 w-100">
                   <p class="text-black font-xs">{{user.username}}</p>
                   </a>
-
+                  <app-mutual-friend [userId]="user.userId"></app-mutual-friend>
                 </div>
               </div>
             </div>
