--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -58,7 +58,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="close-btn">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="close-btn">Close</button>
           <button type="submit" class="btn btn-primary" style="color: white" form="createPostForm">Post</button>
         </div>
 
