--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -19,8 +19,12 @@
 
     </div>
 <app-emotion [post]="post"></app-emotion>
+
+<app-comment [post]="post"></app-comment>
   </div>
 </div>
+
+
 
 <!--Edit Post Modal-->
 <div class="modal fade show" id="editPostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
