commit before new branch

--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -46,6 +46,8 @@
           <ckeditor [editor]="Editor" formControlName="description" >
           </ckeditor>
           <input type="hidden" formControlName="id">
+          <input type="hidden" formControlName="likeCount">
+          <input type="hidden" formControlName="heartCount">
         </form>
       </div>
       <div class="modal-footer">
