--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,10 +9,10 @@
     </div>
 
 
-    <form action="#" class="float-left header-search">
+    <form action="#" class="float-left header-search" (ngSubmit)="search(key.value)">
       <div class="form-group mb-0 icon-input">
         <i class="feather-search font-sm text-grey-400"></i>
-        <input type="text" placeholder="Start typing to search.." class="bg-grey border-0 lh-32 pt-2 pb-2 ps-5 pe-3 font-xssss fw-500 rounded-xl w350 theme-dark-bg">
+        <input type="text" placeholder="Start typing to search.." class="bg-grey border-0 lh-32 pt-2 pb-2 ps-5 pe-3 font-xssss fw-500 rounded-xl w350 theme-dark-bg" #key>
       </div>
     </form>
     <a href="default.html" class="p-2 text-center ms-3 menu-icon center-menu-icon"><i class="feather-home font-lg alert-primary btn-round-lg theme-dark-bg text-current "></i></a>
