--- a/src/app/user/search-friend/search-friend.component.html
+++ b/src/app/user/search-friend/search-friend.component.html
@@ -1,1 +1,35 @@
+<div class="main-content right-chat-active">
 
+  <div class="middle-sidebar-bottom">
+    <div class="middle-sidebar-left pe-0">
+      <div class="row">
+        <div class="col-xl-12">
+          <div class="card shadow-xss d-block d-flex border-0 p-4 mb-3 position-fixed" style="width: 950px">
+            <div class="card-body d-flex align-items-center p-0">
+              <h2 class="fw-700 mb-0 mt-0 font-md text-grey-900">Results for '{{key}}'</h2>
+            </div>
+          </div>
+          <div class="row ps-2 pe-2 mt-4" infinite-scroll
+               [infiniteScrollDistance]="distance"
+               [infiniteScrollThrottle]="throttle"
+               (scrolled)="onScroll()"
+          >
+            <ul class="notification-box">
+              <li *ngFor="let user of listUser" class="card-body">
+                <div *ngIf="user.userId != currentUserId">
+                  <div class="d-flex align-items-center p-3 rounded-3 bg-lightblue theme-light-bg">
+                    <img [src]="user.avatar" alt="avatar" class="font-xssss w45 me-3">
+                    <h6 class="font-xss text-grey-900 text-grey-900 mb-0 mt-0 fw-500 lh-20"><strong><a
+                      [routerLink]="['/users/user-profile',user.userId]">{{user.username}}</a></strong>
+                      <app-mutual-friend [userId]="user.userId"></app-mutual-friend>
+                    </h6>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
