--- a/src/app/admin/member/member.component.html
+++ b/src/app/admin/member/member.component.html
@@ -1,1 +1,17 @@
-<p>member works!</p>
+<div >
+  <div class="card d-block border-0 shadow-xss rounded-3 overflow-hidden mb-3">
+    <div class="card-body d-block w-100 ps-3 pe-3 pb-4 text-center">
+      <figure class="avatar ms-auto me-auto mb-0 position-relative w65 z-index-1">
+        <img src="{{userActivated.avatar}}" alt="image"
+             class="float-right p-0 bg-white rounded-circle w-100 shadow-xss">
+      </figure>
+      <div class="clearfix"></div>
+      <h4 class="fw-700 font-xsss mt-3 mb-1">{{userActivated.firstName + ' ' + userActivated.lastName}}</h4>
+      <p class="fw-500 font-xsssss text-grey-500 mt-0 mb-3">{{userActivated.email}}</p>
+      <div type="button" (click)="blockAUser()"
+           class="mt-0 btn pt-2 pb-2 ps-3 pe-3 lh-24 ms-1 ls-3 d-inline-block rounded-xl bg-warning font-xsssss fw-700 ls-lg text-white">
+        Block
+      </div>
+    </div>
+  </div>
+</div>
