--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -73,10 +73,11 @@
             </div>
             <div class="card-body d-block pt-0 pb-2">
               <div class="row">
-                <div class="col-6 mb-2 pe-1" *ngFor="let user of listFriend;index as i">
+                <div class="col-6 mb-2 pe-1 text-center" *ngFor="let user of listFriend;index as i">
                   <div *ngIf="i<4">
-                    <a [routerLink]="['/users/user-profile',user.userId]"><img [src]="user.avatar" alt="image" class="img-fluid rounded-3 h-75 w-100">
-                      <p class="text-black font-xs">{{user.username}}</p>
+                    <a [routerLink]="['/users/user-profile',user.userId]">
+                      <img [src]="user.avatar" alt="image" class="img-fluid rounded-3 h100 w-100 mb-1">
+                      <p class="text-black font-sm mb-0">{{user.username}}</p>
                     </a>
                     <app-mutual-friend [userId]="user.userId"></app-mutual-friend>
                   </div>
