--- a/src/app/user/friend/friend.component.html
+++ b/src/app/user/friend/friend.component.html
@@ -7,7 +7,7 @@
         <div class="col-xl-12">
           <div class="card shadow-xss w-100 d-block d-flex border-0 p-4 mb-3">
             <div class="card-body d-flex align-items-center p-0">
-              <h2 class="fw-700 mb-0 mt-0 font-md text-grey-900">Friends</h2>
+              <h2 class="fw-700 mb-0 mt-0 font-md text-grey-900">{{title}}</h2>
               <div class="search-form-2 ms-auto">
                 <i class="ti-search font-xss"></i>
                 <input type="text" class="form-control text-grey-500 mb-0 bg-greylight theme-dark-bg border-0" #key
